# lod-prepare

./: .editorconfig  .gitignore  Cargo.toml  README.adoc  config.yml  rebuild-dummy-db.sh  tooling.adoc
.github/workflows/: rust-build.yml  rust.yml
build-db/: Cargo.toml
build-db/src/: main.rs
src/: cli.rs  main.rs
