[package]
name = "lod-prepare"
version = "0.3.0"
authors = ["Benno Bielmeier <benno.bielmeier@st.oth-regensburg.de>"]
edition = "2018"
default-run = "lod-prepare"

[workspace]
members = [
    "build-db",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
exitcode = "1.1.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rusqlite = { version = "0.24", features = ["bundled"] }
rustfft = "4"
