[package]
name = "build-db"
version = "0.5.0"
authors = ["Benno Bielmeier <benno.bielmeier@st.oth-regensburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "*"

[dependencies.rusqlite]
version = "0.24.1"
features = ["bundled"]
