[package]
name = "build-db"
version = "0.3.0"
authors = ["Benno Bielmeier <benno.bielmeier@st.oth-regensburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["color"] }
env_logger = "*"
exitcode = "1.1.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rusqlite = { version = "0.24", features = ["bundled"] }
